--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -84,33 +84,33 @@
 	                    <td width="500" id="article">
 					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"> version française</a> version turque </h5><span>
 
-<p><span><h5>
-Okurlarımız için öncelikle kendinizi tanıtabilir misiniz ?</h5><span></p>
+<p><span><b>
+Okurlarımız için öncelikle kendinizi tanıtabilir misiniz ?</b><span></p>
 <p><span><i>
 Genç bir çizgi roman yazarı ve çizerim, Fransızım. Şu an Mamoste Dîn ismiyle çalışıyorum. Mamoste Dîn Kürtçe, “deli hoca, deli öğretmen” anlamına geliyormuş. Bu ismi bana, Lavrion kampında çizim ve gravürler yaptırdığım insanlar verdi.</i><span></p>
-<p><span><h5>Kürt hareketiyle nasıl tanıştınız ?</h5><span></p>
+<p><span><b>Kürt hareketiyle nasıl tanıştınız ?</b><span></p>
 <p><span><i>Tarih okumalarıyla. Yani, 1936 İspanya savaşı, İRA, Zapatistalar, Sitüasyonist Enternasyonal, gerillalar ve tarihi devrimci hareketler hakkında nasıl araştırmalar yaptıysam öyle tanıştım. Bir politik bilince sahip olmak istiyorsak bu referanslara sahip olmamız gerekiyor. İçinde bulunduğumuz toplumu anlayabilmek ve stratejik bir bakış açısı edinebilmek için farklı antikapitalist, antifaşist ve devrimci hareketleri tanımamız gerekiyor.
 </i><span></p>
-<p><span><h5>Lavrion’daki mülteciler kampına gitmeye ve bir çizgi roman hazırlamaya nasıl karar verdiniz ?</h5><span></p>
+<p><span><b>Lavrion’daki mülteciler kampına gitmeye ve bir çizgi roman hazırlamaya nasıl karar verdiniz ?</b><span></p>
 <p><span><i>
 Lavrion kampından, çok eskiden beri tanıdığım bir dostum, yoldaşım sayesinde haberdar oldum. Kendisi coğrafyacı ve master tezini bu kamp üzerine yapmıştı. Yaptığım işleri, çizimlerimi ve politik bakışımı bilen bir arkadaş. Kampı çizmem ve oranın üzerine çalışmam için kendisiyle gitmemi önerdi.
 </i><span></p>
-<p><span><h5>Kampta sizi etkileyen ve bizimle paylaşmak istediğiniz anılarınız var mı ?</h5><span></p>
+<p><span><b>Kampta sizi etkileyen ve bizimle paylaşmak istediğiniz anılarınız var mı ?</b><span></p>
 <p><span><i><i>Çizgi romanda bulunan anılardan bahsedebilir miyim yoksa okuyacak olanların oradan keşfetmesine izin mi verelim bilmiyorum. Mesela kampta, yöneticilerin birinden öğrendiğim ilk Kürtçe kelimelerim, “sen delisin!” ve “doktor nerede?”.
 <br>Bu cümleleri kafamda iyice tekrarladıktan sonra, yeni bilgilerimi gururla paylaşmak için karşıma çıkan ilk insana doğru koştum. Tabii o günden sonra herkes bana “deli öğretmen” diye seslenmeye başladı. “Öğretmen” demelerinin sebebi kampta bir gravür atölyesi yapmam, onlara gravür öğretmemdi. İlk kelimem “deli” olduğu için de “deli öğretmen” diye kaldı ismim. Sorunuza cevap vermek çok zor çünkü çok anım var ve hangisi daha ilginç bilmiyorum.
 <br>Kamptaki insanların ikişer ikişer, yan yana, bazen birbiriyle hiç konuşmadan sadece sigaralarını tüttürerek, düzenli bir şekilde avluda gezindiği saatler var mesela. Birlikte adımlayan iki kişi birbiriyle hiç konuşmadan yürüyordu. Cezaevi yıllarında edindikleri volta alışkanlığındandı bu.
 	<br>Lavrion kampında bolca sigara ve çay içilirdi. Paketi ilk çıkaran kişi bütün diğer yoldaşlarına uzatırdı sigarasını. Aynı şey çay için de geçerliydi. Öyleki herkes çay, şeker ve sigara kokardı sanki.</i><span></p>
-<p><span><h5>Lavrion kampı sizde ne gibi bir etki bıraktı, bu deneyimden ne gibi izler taşıyorsunuz ? Kürt mücadelesi ile Fransa’daki mücadeleler arasında bir fark bulunuyor mu ? </h5><span></p>
+<p><span><b>Lavrion kampı sizde ne gibi bir etki bıraktı, bu deneyimden ne gibi izler taşıyorsunuz ? Kürt mücadelesi ile Fransa’daki mücadeleler arasında bir fark bulunuyor mu ? </b><span></p>
 <p><span><i>Birçok şey, özellikle dostluklar. Belki bir süreden sonra paylaşım arasıra gönderilen maillerden ibaret kalınca, dostluktan bahsetmek biraz yüzeysel kalıyordur. Fakat tanıştığım bu insanlar hâlâ bir sevdiklerinin, bir aile bireyinin ya da ortak bir anımızın resmini çizmemi istediklerinde çok seviniyorum. Haberleşmeye devam etmek ve birbirini unutmamak çok hoş bir duygu.<br>
 	Öyle düşünüyorum ki, Fransa ve Kürdistan’daki politik referanslar, devrimci fikirler tam olarak aynı değiller. PKK tarihiyle ilişkili olsun olmasın pek çok farklılık var. Mesela “demokratik konfederalizm”, Fransa’da radikal gruplar arasında pek önemli bir teori olarak görülmüyor. Sonra kişilik kültü meselesi ve buna bağlı olarak kamp içerisinde var olan komünist görsel ve afişleme. Fransa’da temkinli şekilde yaklaşılan şeyler var. Örneğin Marx, Stalin veya Öcalan olsun. Kırmızı fon üzerinde işlenen devasa portreler Fransa’da aynı tarihsel etkiye  sahip değil.
 <br>Bununla birlikte, Fransa’da ciddi radikal grupların hedeflemesi gereken pratikler söz konusu. Örneğin kamptaki politik yaşam, her bireyin katıldığı kamp düzeni, meclisler sistemi ve oturanların kendi hayatları üzerindeki somut etkileri gibi. Bu gibi deneyimleri Sarı Yelekliler de yerel ölçeklerde uygulamaya çalıştı.
 <br>Gerçi Fransa’da stratejik devrimci bir örgütlenmeden henüz bahsedemeyiz. Sarı Yelekliler olsun, az ya da çok tutarlı radikal solcular olsun, şu anda ne silahlı mücadele verecek düzeyde ne de yeterince disiplinliler. PKK gibi radikal ve tutarlı şekilde hareket edemiyorlar dolayısıyla.
 </i><span></p>
-<p><span><h5>Çizgi romanda Kürtlerin mücadelesi ile Sarı Yelekliler arasında bir paralellik kurmuşsunuz, bunu açabilir misiniz ? </h5><span></p>
+<p><span><b>Çizgi romanda Kürtlerin mücadelesi ile Sarı Yelekliler arasında bir paralellik kurmuşsunuz, bunu açabilir misiniz ? </b><span></p>
 <p><span><i>2019 yılında eylemlerin ikinci haftasından itibaren Sarı Yelekliler’in  çoğu eylemine katıldım. Benim için son derece hoş ve ilginç bir yıl oldu. Fakat Sarı Yelekliler’in dünyada ne ölçüde bir karşılığı olmuştu bilmiyordum. Öyle ki kampa geldiğimde, orada kalanlar arasında benim göz altı ve mahkeme maceralarımı duyanların bazıları, Kürt mücadelesinin öncü figürleri ya da bayraklarıyla bezenmiş sarı yeleklerini çıkarıp gösterdiler bana. Ülkesinden kaçmış, işkence görmüş, yıllarca cezaevinde yatmış, yakınlarını kaybetmiş, DAİŞ’e karşı savaşmış bu insanların gururla, Sarı Yelekliler’in yanında olduğunu söylemesi, benim için inanılmaz birşeydi. Sonra anladım ki Fransa’da yaşadığımız birkaç çatışmayla onların yaşadıklarının yanından geçemezdik bile.
 <br>Tabi bu mücadeleler temel olarak “taleplerde” birleşiyor. Fransa’daki şiddet çok daha küçük ölçekli olsa da kapitalist devletlerin direnişçileri kriminalize etmesiyle birbirine benziyor. Bunun basit bir nedeni var. Çünkü tüm bu ülkeler kapitalist ve liberaller. Az ya da çok şiddet kullanan ve de az ya da çok ırkçı, homofobik, ataerkil bir topluma sahip olan bu devletler aynı ekonomik ve politik temellere sahipler. Fransa da Türkiye gibi toplumunu sömürüyor, yabancılaştırıyor ve bireylerin özgürlüklerine el koyuyor. Bireylerin kendi yaşamlarını düzenleme gücünü elinden alıyor.
 </i><span></p>
-<p><span><h5>Lavrion’daki Kürt kadınlar ile konuşabildiniz mi? Konuştuysanız, hem mülteci hem de kadın olmanın zor yükünü taşıyan bu kadınlar hakkında neler söyleyebilirsiniz ?</h5><span></p>
+<p><span><b>Lavrion’daki Kürt kadınlar ile konuşabildiniz mi? Konuştuysanız, hem mülteci hem de kadın olmanın zor yükünü taşıyan bu kadınlar hakkında neler söyleyebilirsiniz ?</b><span></p>
 <p><span><i>Evet, Kürt kadınlarla paylaşımım oldu. Kadın olmanın, durumu yadsınamaz şekilde zorlaştırdığı muhakkak, özellikle de kaçak durumdaysanız. Ben kamptayken orada bulunan kadınların çoğu ailesiyle, çocuklarıyla gelmişti. Böylesi zor koşullarda kamp hayatına, yani politik hayata katılım da zorlaşıyordu. Kamp içinde alınan tüm kararlarda kadınlar meclisinin veto hakkı olsa da, aynı kadınların politik örgütlenmeyi düşünmek için zamanları yoksa, bu veto haklarının da önemi kalmıyor.
 <br>Çocuklardan herkes sorumlu. Anne-babalar kampta çocukları için bir dayanışmanın olduğunu biliyorlar. Ama yine çocuk demek böylesi bir kamp hayatında ebeveyn için fazladan sorumluluk demek.
 <br>Üstelik çoğu kamp dışında da çalışıyor. Örneğin hiçbir kadın gravür atölyeme katılmaya zaman bulamadı. Hamile bir kadın olmanın zorluğundan bahsetmiyorum bile. Kampta oda arkadaşımız hamile bir kadındı. Almanya’da Dublin Yasası’na takılmış ve Yunanistan’a iade edilmişti. Kocası ise Almanya’da kalmıştı. Yalnız ve mülteciydi. İyi ki orada herkes dayanışma içinde. Yan odadaki kadınlar yemeğini hazırlıyor, kendisine yardım ediyorlardı. Lavrion Kampı, gördüğüm mülteci kampları ve hatta tüm illegal ortak yaşam alanları içinde, örnek gösterilecek bir yer. Hatta belki kadınlar için herhangi bir tehlikenin olmadığı tek yer.
@@ -118,10 +118,10 @@ Lavrion kampından, çok eskiden beri tanıdığım bir dostum, yoldaşım sayes
 
 Bu bölümde, başka bir kampta gerçekleşen bir taciz olayında, Kadın Meclisi’nin tacizciyi yargılamasını işliyorum. Bölüm aşağı yukarı şöyle bitiyor: “Kadınlar şikayette bulunmanın gereksiz olduğunu biliyorlar. Hele ki içinde bulundukları bu durumda, adaletin onları asla duymayacağını biliyorlar. Ki öyle olamasa bile, adalete, polislere, hakimlere gidip sorunu çözmelerini istemek herkes için daha tehlikeli olacaktır. Hakimler insanları hapishaneye yollar. Bu hakimlerin bir hapishanenin ne olduğuna dair temelde hiçbir somut fikirleri yoktur. Sefalete ve eşitsizliğe dair bir fikirleri yoktur.”
 </i><span></p>
-<p><span><h5>Sanatınızla bize sunduğunuz bu tanıklık dışında, eserinizin okura ne gibi bir mesaj taşımasını umut ediyorsunuz ?</h5><span></p>
+<p><span><b>Sanatınızla bize sunduğunuz bu tanıklık dışında, eserinizin okura ne gibi bir mesaj taşımasını umut ediyorsunuz ?</b><span></p>
 <p><span><i>İdeal olarak okurlarda politik bir farkındalık ve harekete geçme isteği yaratmak istiyorum. Devrimci mücadelenin herkesi ilgilendirdiği bilincini ve bu mücadelenin Fransa’da da gerekli olduğunu söylemek istiyorum. Sömürü, yabancılaşma, şu anki adalet ve siyaset saçmalıkları... Bunlar yalnızca Türkiye veya Avrupa dışında ki ülkeleri değil, herkesi ilgilendiriyor.
 </i><span></p>
-<p><span><h5>Okurlarımız için eklemek istediğiniz birşey var mı ?</h5><span></p>
+<p><span><b>Okurlarımız için eklemek istediğiniz birşey var mı ?</b><span></p>
 <p><span><i>Umarım kitap hoşlarına gider.
 </i><span></p>
 
