--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -70,14 +70,16 @@
 	
 	
 	<br>
-	  <br>
-			<caption><span><h4><i>Les luttes se croisent et se ressemblent, comme celles des Kurdes et des gilets jaunes. 
-				Le même combat pour la liberté et l'égalité sociale rencontre la même répression. La dessinatrice Mamoste Dîn nous fait découvrir le camp autogéré 
-				d'exilés kurdes de Lavrio en Grèce. Dans un subtil va-et-vient entre la Grèce et la France, entre les histoires personnelles et les combats politiques 
-				des activistes kurdes et de la jeune Judith, 
-				venue documenter leur quotidien, nous partageons un moment de la vie du camp et apprenons à connaître et à aimer ses habitants.</i></h4><span></caption> 
-			
-	         
+	  <br><cite id="resume"><span>Les luttes se croisent et se ressemblent, comme celles des
+Kurdes et des gilets jaunes. Le même combat pour la liberté
+et l'égalité sociale rencontre la même répression.
+La dessinatrice Mamoste Dîn nous fait découvrir le camp
+autogéré d'exilés kurdes de Lavrio en Grèce. Dans un subtil
+va-et-vient entre la Grèce et la France, entre les histoires
+personnelles et les combats politiques des activistes kurdes
+et de la jeune Judith, venue documenter leur quotidien, nous
+partageons un moment de la vie du camp et apprenons à
+				connaître et à aimer ses habitants.</cite><span>
             <br>
 	<br>
 		 <a id="partieune">
