--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -108,7 +108,7 @@ Il y avait toujours ces heures pendant lesquelles, deux par deux, côte à côte
 
 A Lavrio tout le monde fumait des cigarettes et buvait du thé en permanence. Et le premier qui commençait à fumer proposait toujours à tous ses camarades de tablée ou de balade une cigarette. Il en allait de même pour le thé, si bien que tout le monde finissait par sentir cette odeur de plante, de sucre et de fumée.
 </i><span></p>
-<p><span><b>Quel effet vous a laissé le camp, quelles traces gardez vous de cette expérience ?</b><span></p>
+<p><span><b>Quel effet vous a laissé le camp, quelles traces gardez-vous de cette expérience ?</b><span></p>
 <p><span><i>
 Beaucoup de choses, en premier lieu des amis. Enfin après c’est peut-être abstrait de parler d’amitié, quand les liens ne se font plus que par mails plus ou moins réguliers, mais je suis toujours contente quand les gens me demandent de dessiner des portraits de leurs familles, de leurs amours et même parfois des souvenirs. C’est agréable d’avoir des nouvelles et de ne pas se perdre de vue.
 <br> 
@@ -135,7 +135,7 @@ Le rapport de la rue, de la police et de la justice aux femmes est toujours viol
 <p><span><b>Outre un témoignage à travers votre art, quel message espérez-vous que cette oeuvre apporte aux lecteurs ?</b><span></p>
 <p><span><i>J’aimerais idéalement créer une conscience politique et une volonté d’action chez les lecteurs. Une conscience que tout le monde est concerné par le combat révolutionnaire, et surtout que ce combat est nécessaire en France aussi. L’exploitation, l’aliénation, ces farces que sont la justice et la politique actuellement, ne concernent pas que la Turquie ou des pays lointains mais bien tout le monde.
 </i><span></p>
-<p><span><b>Auriez vous quelque chose à ajouter pour nos lecteurs et lectrices ?</b><span></p>
+<p><span><b>Auriez-vous quelque chose à ajouter pour nos lecteurs et lectrices ?</b><span></p>
 <p><span><i>j’espère que la lecture leur plaira bien sûr !
 </i><span></p><br><br>
 
