--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -18,10 +18,10 @@
 			</a>   
 			        </td>
 				
-					
-	                <td width="900"  id="entete">
-					<a id="corpus" rel="elephant">
-				<img src="image_site/café.jpg" alt="Plagiat Editions entête" />
+		    <td width="900" height="175" id="entete">
+					<a id="corpus" rel="debutaction">
+				<img src="image_site/orange_et_couteau.jpg" alt="Plagiat Editions entête" />
+
 			</a>
 			<figcaption><span><cite>"&#8239;Avant de te faire confiance, je voudrais connaître ta philosophie de la vie&#8239;!&#8239;"<br>Or, si je t'exposais ma philosophie de la vie, tu te précipiterais chez le procureur général</cite><span></figcaption>
 			        </td>
