--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -23,7 +23,7 @@
 			<a id="enteteaction-histoire" rel="elephant">
 				<img src="image_site/pagehistoire2.jpg" alt="Plagiat Editions entête"  />
 			</a>
-			<figcaption><span><cite</cite><span></figcaption>
+			<figcaption><span><cite>"&#8239;Avant de te faire confiance, je voudrais connaître ta philosophie de la vie&#8239;!&#8239;"<br>Or, si je t'exposais ma philosophie de la vie, tu te précipiterais chez le procureur général.</cite><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
