--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -23,7 +23,8 @@
 				<img src="image_site/orange_et_couteau.jpg" alt="Plagiat Editions entête" />
 
 			</a>
-			<figcaption><span><cite></cite><span></figcaption>
+			<figcaption><span><cite>« L’art est bien la transgression dont toute société a besoin pour se comprendre et se dépasser elle-même.»</cite>
+Dominique de Villepin<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
