--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -24,7 +24,7 @@
 
 			</a>
 			<figcaption><span><cite>« L’art est bien la transgression dont toute société a besoin pour se comprendre et se dépasser elle-même.»</cite>
-Dominique de Villepin<span></figcaption>
+<br>Dominique de Villepin<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
