--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -754,6 +754,43 @@ temps de l’impertinence touchait à sa fin. On pourrait aborder de manière fr
 par l’histoire et l’analyse des bons arguments et des bonnes questions posées aux étudiants des écoles
 d’art.&#8239;»<br>
 Dominique Angel, <i>Le sèche-bouteilles. De la fin des avant-gardes à la misère des écoles d’art</i><br><br></p>
+							<p><b><br>-&#8239;Dépassement, réalisation, sens de la modernité<A NAME="4"></A> </b></p><span>
+						<p><span>C’est à partir de la crise de la philosophie, de son dépérissement et de sa fin en tant que philosophie que se constitue, à travers Marx, 
+							Bakounine ou encore Stirner, pour ne citer qu’eux, la première base du projet moderne de la révolution sociale&#8239;:<br><br>
+«&#8239;La question de savoir s'il y a lieu de reconnaître à la pensée humaine une vérité objective n'est pas une question théorique, 
+							mais une question pratique. C'est dans la pratique qu'il faut que l'homme prouve la vérité, c'est-à-dire la réalité, et la puissance de sa pensée, dans ce monde et pour notre temps. La discussion sur la réalité ou l'irréalité d'une pensée qui s'isole de la pratique, est purement scolastique. 
+							[…] Les philosophes n'ont fait qu'interpréter 
+							le monde de différentes manières, ce qui importe c'est de le transformer.&#8239;»<br>
+							Karl Marx, <i>Thèses sur Feuerbach</i>
+							</p>
+						<p><span>La première expression de cette nécessité se trouve en fait en 1838 dans les <i>Prolégomènes à l’Historiosophie</i> d’August von Cieszkowski. 
+							«&#8239;Réaliser les idées dans la vie pratique, telle doit être la grande tâche de l’histoire.&#8239;» 
+							Dans cette «&#8239;praxis post-théorique qui sera l’apanage de l’avenir&#8239;», les héros historiques 
+							«&#8239;doivent être non plus des instruments aveugles du hasard ou de la nécessité&#8239;; mais les artisans lucides de leur propre liberté&#8239;». 
+							«&#8239;L’être et la pensée doivent donc disparaître dans l’action, l’art et la philosophie dans la vie sociale.&#8239;» 
+							«&#8239;De même que la poésie de l’art est passée dans la prose de la pensée, la philosophie doit descendre des hauteurs de la théorie dans le champ de la praxis. 
+							Être la philosophie pratique ou, plus exactement, la philosophie de la praxis.&#8239;»</p>
+						<p><span>Cieszkowski dépasse Hegel en des termes purement hégéliens, il pousse son système philosophique jusqu’à ses conséquences logiques&#8239;: 
+							là où la pensée de l’histoire se reconnaît le pouvoir de transformer le monde, l’idéalisme se renverse dans la plus totale revendication du concret, 
+							celle de la construction historique consciente. À partir de cet effondrement de la philosophie sur elle-même, la méthode dialectique, 
+							«&#8239;la pensée de l’histoire&#8239;», 
+							va rechercher la réalité qui la recherche.</p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+                       				<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+                        			<p><span></p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
@@ -764,7 +801,10 @@ Dominique Angel, <i>Le sèche-bouteilles. De la fin des avant-gardes à la misè
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
-                        <p><span></p>
+						<p><span></p>
+						<p><span></p>
+						<p><span></p>
+                        			<p><span></p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
@@ -772,29 +812,7 @@ Dominique Angel, <i>Le sèche-bouteilles. De la fin des avant-gardes à la misè
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
-                        <p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-                        <p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-                        <p><span></p>
+                        			<p><span></p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
