--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -775,12 +775,74 @@ Dominique Angel, <i>Le sèche-bouteilles. De la fin des avant-gardes à la misè
 							celle de la construction historique consciente. À partir de cet effondrement de la philosophie sur elle-même, la méthode dialectique, 
 							«&#8239;la pensée de l’histoire&#8239;», 
 							va rechercher la réalité qui la recherche.</p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
+						<p><span>De la même manière, chaque domaine s’effondre en s’explicitant lorsqu’il est allé au bout de ses virtualités
+							et de son impérialisme, lorsqu’il s’est proclamé totalité à l’échelle humaine (donc finie). Au cours de ce déploiement, 
+							et seulement après cette illusoire et outrancière proclamation, 
+							la négativité que ce monde portait déjà et depuis 
+							longtemps en soi s’affirme, le dément, le ronge, le démantèle, l’abat. Seule, une totalité accomplie peut révéler
+							qu’elle n’est pas la totalité.</p>
+						<p><span>Ce schéma définit parfaitement la crise de l’art moderne, comme il est très facile de le vérifier en en 
+							étudiant une tendance extrême&#8239;: par exemple, la poésie, de Mallarmé au surréalisme. Ces conditions, déjà dominantes
+à partir de Baudelaire, concernent parallèlement tous les autres moyens d’expression artistiques.</p>
+						<p><span>«&#8239;La connaissance des faits empiriques reste abstraite et superficielle tant 
+							qu’elle n’a pas été concrétisée par son intégration à l’ensemble qui, 
+							seul, permet de dépasser le problème partiel et abstrait pour arriver à son essence concrète,
+et, implicitement, à sa signification.&#8239;»<br>
+							<i>Sur le passage de quelques personnes à travers une assez courte unité de temps</i>, Guy Debord</p>
+						<p><span>La mise en question de la civilisation bourgeoise est apparue dans la dissolution moderne de tous ses
+moyens artistiques. Cette dissolution se trouve être depuis longtemps la vérité première du modernisme occidental&#8239;: la libération des formes artistiques a partout signifié leur réduction à rien.<br>
+Si l’artiste est passé, par un lent processus, de l’état d’amuseur –&#8239;meublant joliment quelques loisirs&#8239;– à l’état
+de l’ambition prophétique, qui pose des questions, prétend donner le sens de la vie, c’est parce que, de plus en plus,
+la question de l’emploi de la vie est effectivement posée par le recul des mythes et des superstitions.<br>
+Ainsi la prétention de l’artiste dans la société bourgeoise est allée de pair avec la réduction pratique de son
+domaine d’action réel vers le zéro et le refus. Tout l’art moderne a été la revendication révolutionnaire d’autres
+métiers, qui sont au-delà de l’abandon des actuelles spécialisations de l’expression unilatérale de moments figés de
+la vie.<br>
+L’aspect progressif de la destruction du langage, dans la poésie, l’écriture romanesque ou tous les arts plastiques est d’être en même temps le témoignage de toute une époque sur l’insuffisance de l’expression artistique, de
+la pseudo-communication. C’est d’avoir été la destruction pratique des instruments de cette pseudo-communication, posant la question de l’invention d’instruments supérieurs, d’un style, d’une forme dans laquelle la vie 
+							pourrait trouver son expression adéquate&#8239;: l’art moderne a fait place nette dans les valeurs et les règles du comportement
+quotidien.</p>
+						<p><span>«&#8239;Il faut redécouvrir l’histoire du mouvement même de l’histoire, 
+							qui a été si bien cachée et détournée. C’est d’ailleurs seulement dans cette entreprise 
+							–&#8239;et dans quelques groupes de recherche artistique généralement liés à elle&#8239;
+– que sont apparues des conduites séduisantes&#8239;; quelque chose qui permet de s’intéresser objectivement à la société
+moderne et au possible qu’elle renferme.<br>
+Il n’y a pas d’autre fidélité, il n’y a pas d’autre compréhension pour l’action de nos camarades du passé, qu’une
+réinvention, au niveau le plus élevé, du problème de la révolution, qui a été d’autant plus arraché de la sphère des
+idées qu’il se pose plus lourdement dans les faits. Mais pourquoi cette réinvention paraît-elle si difficile&#8239;? Elle n’est
+pas difficile à partir d’une expérience de vie quotidienne libre (c’est-à-dire d’une recherche de la liberté dans la vie
+quotidienne). Cette question nous paraît assez concrètement ressentie aujourd’hui dans la jeunesse. Et la ressentir
+avec une exigence suffisante permet aussi de juger en appel, de sauver, de retrouver l’histoire perdue. Elle n’est pas
+difficile pour la pensée dont le rôle est de mettre en cause tout l’existant. Il suffit de n’avoir pas abandonné la philosophie –&#8239; 
+comme la quasi-totalité des philosophes&#8239;–, ou de n’avoir pas abandonné l’art –&#8239;comme la quasi-totalité
+des artistes&#8239;–, ou de n’avoir pas abandonné la contestation de la réalité présente&#8239;– comme la quasi-totalité des militants. 
+Alors, ces questions s’enchaînent jusqu’au même dépassement. Ce sont seulement les spécialistes, dont le
+pouvoir tient avec celui d’une société de la spécialisation, qui ont abandonné la vérité critique de leurs disciplines
+pour garder l’usufruit positif de leur fonction. Mais toutes les recherches réelles confluent vers une totalité, comme
+les gens réels vont se rassembler pour tenter encore une fois de sortir de leur préhistoire.&#8239;»<br>
+							Internationale Situationniste n°7, <i>Les mauvais jours finiront</i></p>
+							
+					<p><b><br>-&#8239;Fragments sur les fondements de l’exigence situationniste<A NAME="5"></A> </b></p><span>
+							
+						<p><span>
+«&#8239;L’époque était parvenue à un niveau de connaissances et de moyens techniques qui rendaient possible et de
+plus en plus nécessaire une construction directe de tous les aspects d’une existence affective et pratique libérée.
+L’appartion de ces moyens d’action supérieurs, encore inemployés à cause des retards survenus dans la liquidation
+de l’économie marchande, avait déjà condamné l’activité esthétique, dépassée quant aux ambitions et quant aux
+pouvoirs. Le dépérissement de l’art, et aussi bien, de toutes les valeurs des anciennes conduites, avait formé notre
+base sociologique.<br>
+Le monopole de la classe dominante sur les instruments qu’il nous fallait contrôler pour réaliser l’art collectif de
+notre temps nous avait placé en dehors même d’une production culturelle officiellement consacrée à l’illustration
+et à la répétition du passé. Un film d’art sur cette génération ne sera qu’un film sur l’absence de ses œuvres.
+Les autres suivaient sans y penser les chemins appris une fois pour toutes, vers leur travail et leur maison, vers leur
+avenir prévisible. Pour eux, déjà, le devoir était devenu une habitude, et l’habitude un devoir. Ils ne voyaient pas
+l’insuffisance de leur ville, ils croyaient naturelle l’insuffisance de leur vie.<br>
+Nous voulions sortir de ce conditionnement, à la recherche d’un autre emploi du paysage urbain, de passions
+nouvelles...<br>
+Pour décrire effectivement cette époque, il faudrait sans doute montrer beaucoup d’autres choses. Mais à quoi
+bon&#8239;? Il faudrait plutôt comprendre&#8239;: la totalité de ce qui s’est fait, ce qui reste à faire, et non ajouter d’autres ruines
+au vieux monde du spectacle et des souvenirs.&#8239;»<br>
+							<i>Sur le passage de quelques personnes à travers une assez courte unité de temps</i></p>
 						<p><span></p>
                        				<p><span></p>
 						<p><span></p>
